compare: fixed spacing for common compare commit in PR open compare page.

--- a/rhodecode/public/css/main.less
+++ b/rhodecode/public/css/main.less
@@ -1478,8 +1478,7 @@ table.integrations {
 }
 
 div.ancestor {
-    margin: @padding 0;
-    line-height: 3.0em;
+    margin: -30px 0px;
 }
 
 .cs_icon_td input[type="checkbox"] {
